--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -2,12 +2,9 @@
 title: Home
 content_blocks:
   - _bookshop_name: hero
-    title: Hi there, I am Vanessa Marley
+    title: Hi there, I am Yacine Benyamina
     description_html: >-
-      <p><strong>Photographer</strong> and <strong>Visual Content
-      Strategist</strong> from Albany. I work as a lifestyle, product, and
-      landscape photographer, creating images for a diverse range of requests,
-      from online media to printed artwork.</p>
+      <p><strong>AI Engineer</strong> and <strong>Game Developer</strong> from Algeria. I work to deliver innovative solutions using AI and game development.</p>
     image: /images/01.jpg
     image_alt: Vanessa Marley's picture
     cta_button: Get in touch
@@ -22,26 +19,12 @@ content_blocks:
     link_url: /projects
     show_projects: true
   - _bookshop_name: testimonials-section
-    title: Happy Clients
+    title: Skills and Technologies
     description_html:
     show_testimonials: true
-  - _bookshop_name: blog-section
-    title: Recent Posts
-    description_html: >-
-      <p>Vonge blog features productivity, tips, inspiration and strategies for
-      massive profits. Find out how to set up a successful blog or how to make
-      yours even better!</p>
-    link_url: /blog
-    show_posts: true
-  - _bookshop_name: newsletter
-    newsletter_title: Join my mailing list
-    newsletter_description: Get inspiration, updates and, cool stuff!
-    newsletter_identifier: >-
-      frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3
-    newsletter_button: Subscribe
   - _bookshop_name: contact-form
     form_title: Get in touch
-    form_description: Vonge comes with a built-in contact form.
+    form_description: Contact me so we can work together!.
     form_submission_email: site@example.com
     form_button_text: Send now
 ---
