--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -1,16 +1,19 @@
 ---
+_schema: default
 title: Home
 content_blocks:
   - _bookshop_name: hero
     title: Hi there, I am Yacine Benyamina
     description_html: >-
-      <p><strong>AI Engineer</strong> and <strong>Game Developer</strong> from Algeria. I work to deliver innovative solutions using AI and game development.</p>
+      <p><strong>AI Engineer</strong> and <strong>Game Developer</strong> from
+      Algeria. I work to deliver innovative solutions using AI and game
+      development.</p>
     image: /images/01.jpg
     image_alt: Vanessa Marley's picture
     cta_button: Get in touch
-    cta_button_link: "#contact"
+    cta_button_link: '#contact'
     works_button: See my works
-    works_button_link: "#projects"
+    works_button_link: '#projects'
   - _bookshop_name: projects-section
     title: Latest Works
     description_html: >-
@@ -25,7 +28,7 @@ content_blocks:
   - _bookshop_name: contact-form
     form_title: Get in touch
     form_description: Contact me so we can work together!.
+    form_success_page: ''
     form_submission_email: site@example.com
     form_button_text: Send now
 ---
-
