--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -25,6 +25,10 @@ content_blocks:
     title: Skills and Technologies
     description_html:
     show_testimonials: true
+  - _bookshop_name: educations-section
+    title: Education
+    description_html:
+    show_educations: true
   - _bookshop_name: contact-form
     form_title: Get in touch
     form_description: Contact me so we can work together!.
