--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -29,6 +29,10 @@ content_blocks:
     title: Education
     description_html: 
     show_educations: true
+  - _bookshop_name: experiences-section
+    title: Experience
+    description_html:
+    show_experiences: true
   - _bookshop_name: contact-form
     form_title: Get in touch
     form_description: Contact me so we can work together!.
