--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -33,6 +33,10 @@ content_blocks:
     title: Experience
     description_html:
     show_experiences: true
+  - _bookshop_name: certificates-section
+    title: Certificates
+    description_html: 
+    show_certificates: true
   - _bookshop_name: contact-form
     form_title: Get in touch
     form_description: Contact me so we can work together!.
