Updated 1 file via CloudCannon.

--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -5,9 +5,9 @@ content_blocks:
   - _bookshop_name: hero
     title: Hi there, I am Yacine Benyamina
     description_html: >-
-      <p><strong>AI Engineer</strong> and <strong>Game Developer</strong> from
-      Algeria. I work to deliver innovative solutions using AI and game
-      development.</p>
+      <p><strong>AI </strong>and<strong> Data Science Student
+      </strong>with<strong> </strong>multiple projects and hands-on experience
+      in the field. I am also a Game Developer for fun :)</p>
     image: /images/01.jpg
     image_alt: Vanessa Marley's picture
     cta_button: Get in touch
@@ -27,7 +27,7 @@ content_blocks:
     show_testimonials: true
   - _bookshop_name: educations-section
     title: Education
-    description_html: 
+    description_html:
     show_educations: true
   - _bookshop_name: experiences-section
     title: Experience
@@ -35,7 +35,7 @@ content_blocks:
     show_experiences: true
   - _bookshop_name: certificates-section
     title: Certificates
-    description_html: 
+    description_html:
     show_certificates: true
   - _bookshop_name: contact-form
     form_title: Get in touch
