--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -7,7 +7,7 @@ content_blocks:
     description_html: >-
       <p><strong>AI </strong>and<strong> Data Science Student
       </strong>with<strong> </strong>multiple projects and hands-on experience
-      in the field. I am also a Game Developer for fun :)</p>
+      in the field. I am also a <strong>Game Developer</strong> for fun :)</p>
     image: /images/01.jpg
     image_alt: Vanessa Marley's picture
     cta_button: Get in touch
